# Medical-Report-Copilot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt
config/: config.yaml  prompts.yaml
notebooks/: eda.ipynb
outputs/2025-06-06/14-52-44/.hydra/: hydra.yaml
outputs/2025-06-06/14-54-08/.hydra/: config.yaml  hydra.yaml
src/: app.py  main.py  pipeline.py  streamlit_app.py
src/components/: chat_interface.py  file_uploader.py  report_viewer.py
src/database/: psql_manager.py  psql_schema.py
src/utils/: cls_LLM.py  llm_model_factory.py  settings.py
static/css/: styles.css
